# cpp_prom_2023

./: .gitignore  README.md
hw1/: CMakeLists.txt  README.md
hw1/exe/: CMakeLists.txt  main.cpp
hw1/googletest/docs/_sass/: main.scssZone.Identifier
hw1/include/: modifications.hpp
hw1/lib/: CMakeLists.txt  modifications.cpp
hw1/test/integr/: CMakeLists.txt  tests.cpp
hw1/test/unit/: CMakeLists.txt  tests.cpp
